--- a/css/base.css
+++ b/css/base.css
@@ -332,7 +332,7 @@ input[type="number"] { -moz-appearance: textfield; }
 
 @media screen and (max-width: 1200px) { .index-page .nav-main, .index-page .banner-floor .mySwiper, .index-page .floor, .index-page .swiper-title-list { width: 100%; }
   .index-page .nav-main .login, .index-page .nav-main .tag, .index-page .nav-main .reg { display: none; }
-  .index-page .nav-main .nav-list .nav-box { width: calc((100vw - 340px) / 4); }
+  .index-page .nav-main .nav-list .nav-box { width: calc((100vw - 340px) / 4); font-size: 2vw; }
   .index-page .nav-main .nav-list .nav-box .show-list { width: calc((100vw - 340px) / 4); }
   .index-page .nav-main .logo2 { margin-right: 10px; }
   .index-page .nav-line { margin-bottom: 0; }
