--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,3 +1,4 @@
+@charset "utf-8";
 //common
 @import "./common/helper";
 @import "./common/mixin";
@@ -20,99 +21,3 @@
 
 
 
-@media screen and (max-width: 1200px) {
-  .index-page{
-    .nav-main,
-    .banner-floor .mySwiper,
-    .floor ,
-    .swiper-title-list{
-      width: 100%;
-    }
-    .nav-main{
-      .login,
-      .tag,
-      .reg{
-        display: none;
-      }
-      .nav-list{
-        .nav-box{
-          width:calc((100vw - 340px) / 4);
-          font-size: vwPad(24);
-          .show-list{
-            width: calc((100vw - 340px) / 4);
-          }
-        }
-      }
-      .logo2{
-        margin-right: 10px;
-      }
-    }
-    .nav-line{
-      margin-bottom: 0;
-    }
-    .banner-floor{
-      .swiper-pagination{
-        display: none;
-      }
-      .mySwiper{
-        .title{
-          font-size: vwPad(52);
-        }
-      }
-      .swiper-title-list{
-        display: none;
-      }
-      .slogen-box{
-        position: initial;  text-align: right;
-        padding-right: 20px;
-        transform: translateX(0);
-        .title{
-          display: none;
-        }
-      }
-    }
-    .campaign{
-      .campaign-main{
-        border-bottom:none;
-        .img-box{
-          width:vwPad(520);
-        }
-        .info-show-box{
-          width:vwPad(660);
-          padding-left: 10px; padding-right: 10px;
-        }
-        .btn-box{
-          @include flex(center);
-          width:100vw;
-          bottom:-40px; left:auto; right:0;
-        }
-      }
-      
-    }
-  }
-}
-
-
-@media screen and (max-width: 768px) {
-  .index-page{
-    .nav-main{
-      width:100vw;
-      .login-box,
-      .nav-list{
-        display: none;
-      }
-      .menu-btn{
-        display: block;
-        margin-left: 10px;
-        margin-right: calc(100% - 240px );
-      }
-    }
-    .banner-floor{
-      .swiper-slide{
-        .title{
-          display: none;
-        }
-      }
-    }
-  }
-}
