--- a/sass/common/common.scss
+++ b/sass/common/common.scss
@@ -13,6 +13,10 @@ th{
   text-align: center ;
 }
 
+video{
+  object-fit: contain;
+}
+
 .cloud{
   position: fixed;
   width: 100%; height: 100%; left:0%; top:0%; z-index:100;
@@ -31,11 +35,14 @@ th{
 .radius{
   border-radius: 4px;
 }
+.img-box{
+  display: block;
+}
 
 .common-layer{
   @extend .shadow;
   position: fixed;
-  left:50%; top:50%; z-index:110;
+  left:50%; top:50%; z-index:110; border-radius: 6px;
   transform: translate(-50%, -50%);
   background-color: #fff;
   .title{
@@ -47,6 +54,9 @@ th{
         width:100%;
       }
     }
+  }
+  input{
+    font-size: 14px;
   }
 }
 
