--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -13,18 +13,23 @@
     border-bottom: 2px solid #ededed; 
   }
   .nav-main{
-    @include flex(left, bottom);
-    box-sizing: border-box;
-    width:1200px; margin:0 auto; height:150px; padding-bottom: 20px; 
+    @extend .clearfix;
+    box-sizing: border-box; position: relative;
+    width:1200px; margin:0 auto; height:150px; padding-bottom: 20px;  padding-top: 30px;
     .menu-btn{
-      display: none;
+      display: none; float: left;
+      margin-top: 80px; margin-left: 10px;
+    }
+    .right{
+      @include flex(right , bottom);
+      float: right; padding-top: 35px;
     }
     .logo1{
       width:100px; height:100px;
-      
+      float: left;
     }
     .logo2{
-      width:82px; height:65px; margin-right: 90px;
+      width:82px; height:65px;  margin-right: 20px;
       .img{
         width:100%;
       }
@@ -41,16 +46,16 @@
     }
     .nav-list{
         @include flex(left,center);
-        position: relative;
-        padding-left: 40px; z-index:80;
+        position: relative; float: left;
+        padding-left: 40px; z-index:80; margin-top: 70px;
         .nav-box{
           cursor: pointer; box-sizing: border-box;
-          width:170px; height:30px; line-height:30px ; padding-top: 4px; margin-right: 15px; font-size: 16px; padding-left: 10px; 
+          height:30px; line-height:30px ; padding-top: 4px; margin-right: 15px; font-size: 16px; padding-left: 10px;  padding-right: 30px;
           .show-list{
             @extend .shadow;
-            position: absolute; max-height:0; overflow: hidden; box-sizing: border-box;
+            position: absolute; overflow: hidden; box-sizing: border-box; display: none;
             margin-left: -10px;  padding:0 10px; width:170px; 
-            background-color: $white; 
+            background-color: $white;  border-top:4px solid #ff2e2e; padding-top: 0;
             transition: max-height 0.5s;
             .li{
               height:34px; line-height: 34px; width:100%;
@@ -58,10 +63,8 @@
             }
           }
           &:hover{
-            border-top:4px solid #ff2e2e; padding-top: 0;
             .show-list{
-              max-height:200px;
-              box-shadow: 0px 6px 6px 0px rgba(0, 0, 0, .1);
+               display: block;
             }
           }
         }
@@ -75,12 +78,12 @@
       height:auto;padding: 0 10px; border-bottom:1px solid #e7e7e7;
       .show{
         display: inline-block;
-        font-size:vw(30); height:vw(45); line-height: vw(45);  width: 100%;
+        font-size:vw(30); height:vw(55); line-height: vw(55);  width: 100%;
       }
       .show-list{
         padding-left: 15px; display: none;
         .li{
-          font-size:vw(30); height:vw(45); line-height: vw(45);
+          font-size:vw(30); height:vw(55); line-height: vw(55);
           border-bottom: 1px solid #e7e7e7;
           &:last-of-type{
             border:none;
@@ -94,7 +97,9 @@
     .mySwiper{
       width:1200px; height:580px; margin:0 auto;
       .swiper-slide{
-        position: relative;
+        position: relative; 
+        background:no-repeat center;
+        background-size:100% auto ;
       }
       .swiper-button-prev,
       .swiper-button-next{
@@ -104,6 +109,10 @@
         cursor: default;
         font-size: 48px; width:700px; margin-top: 350px; margin-left: 60px;
         color:#fff;
+        a{
+          color:#fff;
+          
+        }
       }
       .swiper-pagination{
         .swiper-pagination-bullet{
@@ -120,7 +129,13 @@
       width:1150px; margin:30px auto 0;  padding-right: 370px;
       .title{
         font-size: 16px; line-height: 1; padding-bottom: 10px; margin-bottom: 10px;
-        color:#ff2e2e; border-bottom:1px solid #ff2e2e;
+        color:$red; border-bottom:1px solid $red;
+        a{
+          color:$red;
+          &:hover{
+            color:$white;
+          }
+        }
         &:last-of-type{
           border:none; margin-bottom: 0; padding-bottom: 0;
         }
@@ -146,7 +161,10 @@
     }
   }
   .floor{
-    width:1200px; margin:75px auto 0 ;
+    width:1200px; margin:75px auto 0 ; box-sizing: border-box;
+  }
+  .campaign-floor{
+    box-sizing: border-box;
   }
   .campaign-main{
     border:1px solid #e7e7e7;
@@ -198,14 +216,17 @@
     }
   }
   .tv-show-floor{
+    box-sizing: border-box;
     .get-more{
       @include flex(center); 
       writing-mode: tb-rl; float: right; text-align: center;
       height:300px; font-size: 28px; margin-right: 30px;
       color:#696a6d;
       .icon-box{
+        display: inline-block;
         width:36px; height:36px; vertical-align: middle; margin-top: 10px;
         .icon{
+          display: block;
           width: 100%;
         }
       }
@@ -240,7 +261,7 @@
     }
     .tv-title{
       @include holder(2);
-      line-height: 33px; font-size: 24px;width:300px; margin-bottom: 10px;
+      line-height: 33px; font-size: 24px;width:80%; margin-bottom: 10px;
       color:#010e2d;
     }
     .other-info{
@@ -252,6 +273,7 @@
 
 
   .ms360-floor{
+    box-sizing: border-box;
     .get-more{
       display: block; 
       margin:60px auto; width:203px; height:43px;
@@ -288,9 +310,12 @@
         @include holder(2);
         font-size: 28px; line-height: 38px; padding-top: 24px;
         color:#010e2d;
+        a:hover{
+          color: darken($red, 25%);
+        }
       }
       .new-brief{
-        font-size: 14px; line-height: 21px; padding-top: 12px; width:300px;
+        font-size: 14px; line-height: 21px; padding-top: 12px; width:60%;
         color:#a5a5a5;
       }
       .new-footer{
@@ -323,23 +348,216 @@
   }
 
   .footer-banner{
-    @include flex(left, center);
-    padding-top: 46px; padding-bottom: 50px; margin-top: 100px;
+    overflow: hidden;
+    padding-top: 46px; padding-bottom: 50px; margin-top: 100px; 
     border-top:2px solid #e9e9e9;
     .footer-title{
-      font-size: 24px; margin-right: 90px;
+      float: left;
+      font-size: 24px; margin-right: 10%; line-height: 1.5;
       color:#696a6d;
     }
     .info{
-      font-weight: bold; text-align: center;
-      font-size: 16px; margin-right: 256px; width:470px; height:18px; line-height: 18px;
+      font-weight: bold; text-align: center; float: left;
+      font-size: 16px;  width:470px; height:18px; line-height: 18px; margin-top: 4px;
       color:#a5a5a5; border-left:2px solid #d5d5d5; border-right: 2px solid #d5d5d5;
     }
     .red-btn{
-      display: block; text-align: center;
+      display: block; text-align: center; float: right;
       width:125px; line-height: 36px; height:36px; border-radius: 18px;
       color:$white; background-color: $red;
     }
   }
   
+}
+
+
+@media screen  and (max-width: 1200px) {
+  .index-page{
+    .nav-main,
+    .banner-floor .mySwiper,
+    .floor ,
+    .swiper-title-list{
+      width: 100%;
+    }
+    .nav-main{
+      padding-left:20px; padding-right: 20px; padding-top: 10px; height: auto; 
+      .nav-list{
+        float: none; position: absolute;
+         z-index:20; margin-top: 0; width:100%; left:0; top:100%;
+        background-color: $white;
+      }
+    }
+    .banner-floor{
+      .swiper-pagination{
+        display: none;
+      }
+      .mySwiper{
+        height: vwPad(580);
+        .title{
+          @include holder(2);
+          font-size: vwPad(52); width:60%; margin-top: vwPad(350); margin-left: 5vw;
+        }
+      }
+      .swiper-title-list{
+        box-sizing: border-box;
+        width:80%; padding: 0;
+        .title{
+          width: 100%;
+        }
+      }
+      .slogen-box{
+        display: none;
+      }
+    }
+    .campaign-floor{
+      padding: 0 10px;
+      .campaign-main{
+        .img-box{
+          @include flex(left, center);
+          float:none;
+          width:100%;
+          background-color: #e7e7e7;
+          .img{
+            display: block;
+            width:auto;
+            height:100%;
+          }
+        }
+        .info-show-box{
+          float: none;
+          width:100%; padding: 20px; height:auto;
+          .campaign-title{
+            width:80%;
+          }
+          .btn-box{
+            position: relative;
+            left:auto; bottom:auto;
+          }
+        }
+      }
+    }
+    .tv-show-floor{
+      position: relative;
+      padding:0 20px;
+      .tv-show-main{
+        overflow: hidden;
+        float: none;
+        width:100%;
+        .tv-box{
+          float: left; width:50%; 
+        }
+        .tv-info-main{
+          float: left;  box-sizing: border-box;
+          padding-left: 10px; padding-top: 10px; height: 300px; width:50%;
+          .tv-info{
+            display: none;
+          }
+        }
+      }
+      .get-more{
+        display: block;  float: none;  writing-mode: horizontal-tb; text-align: left; vertical-align: middle; position: absolute;
+        height: auto; font-size: vwPad(25); top: 10px;
+          right: 20px;
+        .icon-box{
+          vertical-align: middle; margin-top: -2px; margin-left: 4px; width:vwPad(30); height:vwPad(30);
+        }
+      }
+    }
+    .ms360-floor{
+      padding:0 20px;
+      .news-list{
+        .img-box{
+          @include flex(left, center);
+          float: none;
+          width: 100%; height:vwPad(400); 
+          background-color: #e7e7e7;
+          .img{
+            height:100%; width:auto;
+          }
+        }
+        .new-info{
+          float: none;
+          width:100%; 
+        }
+      }
+    }
+    .footer-banner{
+      padding-left: 20px; padding-right: 20px;
+      .footer-title{
+        font-size: vwPad(40);  margin-right: 5vw; line-height: vwPad(60);
+      }
+      .info{
+        font-weight: normal;
+        width:auto; font-size: vwPad(24); line-height: vwPad(60); border:none;
+      }
+    }
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+  .index-page{
+    .nav-line{
+      display: none;
+    }
+    .nav-main{
+      .menu-btn{
+        display: block;
+      }
+      .nav-list{
+        display: none;
+        background-color: $white;
+        .nav-box{
+          position: relative;
+          padding: 10px; height:auto;
+          border-bottom:1px solid #e9e9e9;
+          .show-list{
+            position: absolute;
+            right:20px; top:100%; z-index:80;
+            background-color: $white; 
+          }
+        }
+      }
+    }
+    .banner-floor{
+      .swiper-slide{
+        .title{
+          display: none;
+        }
+      }
+    }
+    .tv-show-floor{
+      position: relative;
+      .tv-show-main{
+        .tv-box{
+          float: none;
+          width:100%; margin-bottom: 5px;
+        }
+        .tv-info-main{
+          float: none;
+          width:100%; height:auto; margin-bottom: 20px;
+          .tv-info{
+            display: block;
+          }
+          .tv-title{
+            width:100%;
+          }
+        }
+      }
+      .get-more{
+        font-size: vw(20);
+        .icon-box{
+          width:vw(24); height:vw(24)
+        }
+      }
+    }
+    .footer-banner{
+      .footer-title{
+        float: none; 
+      }
+      .info{
+        float: none; text-align: left;
+      }
+    }
+  }
 }
