--- a/css/base.css
+++ b/css/base.css
@@ -112,6 +112,7 @@ video { object-fit: contain; }
 .radius, .common-checkbox-txt .label { border-radius: 4px; }
 
 .img-box { display: block; }
+.img-box a { display: block; width: 100%; height: 100%; }
 
 .common-layer { position: fixed; left: 50%; top: 50%; z-index: 110; border-radius: 6px; -webkit-transform: translate(-50%, -50%); -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%); background-color: #fff; }
 .common-layer .title { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; font-size: 18px; height: 26px; }
@@ -322,9 +323,9 @@ input[type="number"] { -moz-appearance: textfield; }
 .index-page .campaign-main .img-box { overflow: hidden; float: left; width: 520px; height: 300px; }
 .index-page .campaign-main .img-box .img { width: 100%; }
 .index-page .campaign-main .info-show-box { float: right; box-sizing: border-box; position: relative; width: 678px; padding-right: 70px; padding-left: 34px; padding-top: 30px; height: 300px; }
-.index-page .campaign-main .campaign-title { overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; font-weight: bold; font-size: 26px; width: 100%; margin-bottom: 30px; color: #010e2d; }
-.index-page .campaign-main .timer, .index-page .campaign-main .address { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-pack: start; -webkit-justify-content: flex-start; -ms-flex-pack: start; justify-content: flex-start; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; font-size: 16px; line-height: 1; width: 100%; line-height: 1; margin-bottom: 15px; color: #696a6d; }
-.index-page .campaign-main .timer:before, .index-page .campaign-main .address:before { content: ''; display: block; width: 19px; height: 19px; margin-right: 15px; background: url("../img/img01.png") no-repeat center; }
+.index-page .campaign-main .campaign-title { overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; font-weight: bold; font-size: 26px; width: 100%; margin-bottom: 25px; color: #010e2d; }
+.index-page .campaign-main .timer, .index-page .campaign-main .address { position: relative; box-sizing: border-box; font-size: 16px; line-height: 1; width: 100%; line-height: 1.4; margin-bottom: 10px; padding-left: 30px; color: #696a6d; }
+.index-page .campaign-main .timer:before, .index-page .campaign-main .address:before { content: ''; display: block; position: absolute; top: 4px; left: 0; width: 19px; height: 19px; margin-right: 15px; background: url("../img/img01.png") no-repeat center; }
 .index-page .campaign-main .address::before { background-image: url("../img/img02.png"); }
 .index-page .campaign-main .btn-box { position: absolute; overflow: hidden; left: 34px; bottom: 40px; }
 .index-page .campaign-main .btn-box .show-btn { display: block; float: left; text-align: center; width: 202px; height: 42px; border-radius: 21px; line-height: 42px; margin-right: 21px; background: #ff2e2e; color: #fff; }
@@ -344,7 +345,8 @@ input[type="number"] { -moz-appearance: textfield; }
 .index-page .tv-show-floor .tv-title { overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; line-height: 33px; font-size: 24px; width: 80%; margin-bottom: 10px; color: #010e2d; }
 .index-page .tv-show-floor .other-info { line-height: 21px; font-size: 16px; color: #696a6d; }
 .index-page .ms360-floor { box-sizing: border-box; }
-.index-page .ms360-floor .get-more { display: block; margin: 60px auto; width: 203px; height: 43px; }
+.index-page .ms360-floor .get-more { display: block; text-align: center; margin: 60px auto; width: 203px; height: 43px; line-height: 43px; font-size: 20px; background: url("../img/img07.png") no-repeat center 100%; color: #696a6d; }
+.index-page .ms360-floor .get-more:hover { color: #696a6d; }
 .index-page .ms360-floor .news-list { overflow: hidden; margin-bottom: 40px; }
 .index-page .ms360-floor .news-list:last-of-type { margin-bottom: 0; }
 .index-page .ms360-floor .news-list .img-box { position: relative; float: left; width: 460px; height: 267px; }
@@ -379,7 +381,7 @@ input[type="number"] { -moz-appearance: textfield; }
   .index-page .campaign-floor .campaign-main .img-box { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-pack: start; -webkit-justify-content: flex-start; -ms-flex-pack: start; justify-content: flex-start; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; float: none; width: 100%; background-color: #e7e7e7; }
   .index-page .campaign-floor .campaign-main .img-box .img { display: block; width: auto; height: 100%; }
   .index-page .campaign-floor .campaign-main .info-show-box { float: none; width: 100%; padding: 20px; height: auto; }
-  .index-page .campaign-floor .campaign-main .info-show-box .campaign-title { width: 80%; }
+  .index-page .campaign-floor .campaign-main .info-show-box .campaign-title { width: 80%; font-size: 3.16667vw; }
   .index-page .campaign-floor .campaign-main .info-show-box .btn-box { position: relative; left: auto; bottom: auto; }
   .index-page .tv-show-floor { position: relative; padding: 0 20px; }
   .index-page .tv-show-floor .tv-show-main { overflow: hidden; float: none; width: 100%; }
@@ -401,6 +403,11 @@ input[type="number"] { -moz-appearance: textfield; }
   .index-page .nav-main .nav-list .nav-box { position: relative; padding: 10px; height: auto; border-bottom: 1px solid #e9e9e9; }
   .index-page .nav-main .nav-list .nav-box .show-list { position: absolute; right: 20px; top: 100%; z-index: 80; background-color: #fff; }
   .index-page .banner-floor .swiper-slide .title { display: none; }
+  .index-page .campaign-floor { padding: 0 10px; }
+  .index-page .campaign-floor .campaign-main .info-show-box { float: none; width: 100%; padding: 20px; height: auto; }
+  .index-page .campaign-floor .campaign-main .info-show-box .campaign-title { width: 80%; font-size: 3.73333vw; }
+  .index-page .campaign-floor .campaign-main .info-show-box .btn-box .show-btn, .index-page .campaign-floor .campaign-main .info-show-box .btn-box .get-btn { float: none; }
+  .index-page .campaign-floor .campaign-main .info-show-box .btn-box .show-btn { margin-bottom: 20px; }
   .index-page .tv-show-floor { position: relative; }
   .index-page .tv-show-floor .tv-show-main .tv-box { float: none; width: 100%; margin-bottom: 5px; }
   .index-page .tv-show-floor .tv-show-main .tv-info-main { float: none; width: 100%; height: auto; margin-bottom: 20px; }
@@ -408,6 +415,7 @@ input[type="number"] { -moz-appearance: textfield; }
   .index-page .tv-show-floor .tv-show-main .tv-info-main .tv-title { width: 100%; }
   .index-page .tv-show-floor .get-more { font-size: 2.66667vw; }
   .index-page .tv-show-floor .get-more .icon-box { width: 3.2vw; height: 3.2vw; }
+  .index-page .ms360-floor .new-info .new-title { font-size: 3.73333vw; }
   .index-page .footer-banner .footer-title { float: none; }
   .index-page .footer-banner .info { float: none; text-align: left; } }
 
