--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -182,17 +182,17 @@
     .campaign-title{
       @include holder(2);
       font-weight: bold;
-      font-size: 26px; width:100%; margin-bottom: 30px;
+      font-size: 26px; width:100%; margin-bottom: 25px;
       color:#010e2d;
     }
     .timer,
     .address{
-      @include flex(left, center);
-      font-size: 16px; line-height: 1; width:100%; line-height: 1; margin-bottom: 15px;
+      position: relative; box-sizing: border-box;
+      font-size: 16px; line-height: 1; width:100%; line-height: 1.4; margin-bottom: 10px; padding-left: 30px;
       color:#696a6d;
       &:before{
         content: '';
-        display: block;
+        display: block; position: absolute; top:4px; left:0;
         width:19px; height:19px; margin-right: 15px;
         background: url('../img/img01.png') no-repeat center;
       }
@@ -275,8 +275,12 @@
   .ms360-floor{
     box-sizing: border-box;
     .get-more{
-      display: block; 
-      margin:60px auto; width:203px; height:43px;
+      display: block;  text-align: center;
+      margin:60px auto; width:203px; height:43px; line-height: 43px; font-size: 20px;
+      background: url('../img/img07.png') no-repeat center 100%; color:#696a6d;
+      &:hover{
+        color:#696a6d;
+      }
     }
     .news-list{
       overflow: hidden;
@@ -428,6 +432,7 @@
           width:100%; padding: 20px; height:auto;
           .campaign-title{
             width:80%;
+            font-size: vwPad(38);
           }
           .btn-box{
             position: relative;
@@ -526,6 +531,30 @@
         }
       }
     }
+    .campaign-floor{
+      padding: 0 10px;
+      .campaign-main{
+
+        .info-show-box{
+          float: none;
+          width:100%; padding: 20px; height:auto;
+          .campaign-title{
+            width:80%;
+            font-size: vw(28);
+          }
+          .btn-box{
+            .show-btn,
+            .get-btn{
+              float: none;
+            }
+            .show-btn{
+              margin-bottom: 20px;
+            }
+          }
+        }
+      }
+    }
+    
     .tv-show-floor{
       position: relative;
       .tv-show-main{
@@ -541,6 +570,7 @@
           }
           .tv-title{
             width:100%;
+            
           }
         }
       }
@@ -548,6 +578,13 @@
         font-size: vw(20);
         .icon-box{
           width:vw(24); height:vw(24)
+        }
+      }
+    }
+    .ms360-floor{
+      .new-info{
+        .new-title{
+          font-size: vw(28);
         }
       }
     }
