--- a/sass/base.scss
+++ b/sass/base.scss
@@ -3,7 +3,7 @@
 @import "./common/helper";
 @import "./common/mixin";
 @import "./common/function";
-@import "./common/font";
+// @import "./common/font";
 @import "./common/common";
 @import "./common/module";
 @import "./reset";
