--- a/sass/pages/index.scss
+++ b/sass/pages/index.scss
@@ -224,7 +224,7 @@
       color:#696a6d;
       .icon-box{
         display: inline-block;
-        width:36px; height:36px; vertical-align: middle; margin-top: 10px;
+        width:36px; height:36px; vertical-align: middle; margin-top: 10px; margin-left: -10px;
         .icon{
           display: block;
           width: 100%;
@@ -431,8 +431,8 @@
           float: none;
           width:100%; padding: 20px; height:auto;
           .campaign-title{
-            width:80%;
-            font-size: vwPad(38);
+            width:85%;
+            font-size: 24px; line-height: 34px;
           }
           .btn-box{
             position: relative;
@@ -482,7 +482,17 @@
         }
         .new-info{
           float: none;
-          width:100%; 
+          width:100%;  height:auto;
+          .new-footer{
+            position: relative;
+            left:auto; bottom:auto; padding-bottom: 20px; padding-top: 20px;
+          }
+          .new-brief{
+            width:90%;
+          }
+          .new-title{
+          font-size: 24px; line-height: 34px;
+        }
         }
       }
     }
@@ -570,7 +580,6 @@
           }
           .tv-title{
             width:100%;
-            
           }
         }
       }
@@ -581,13 +590,7 @@
         }
       }
     }
-    .ms360-floor{
-      .new-info{
-        .new-title{
-          font-size: vw(28);
-        }
-      }
-    }
+   
     .footer-banner{
       .footer-title{
         float: none; 
