--- a/css/base.css
+++ b/css/base.css
@@ -10,91 +10,6 @@
 
 /* 设备尺寸 */
 /* 媒体查询 */
-@font-face { font-family: "iconfont";
-  /* Project id 3823927 */
-  src: url("@/assets/fonts/iconfont.woff2?t=1670914937485") format("woff2"), url("@/assets/fonts/iconfont.woff?t=1670914937485") format("woff"), url("@/assets/fonts/iconfont.ttf?t=1670914937485") format("truetype"), url("@/assets/fonts/iconfont.svg?t=1670914937485#iconfont") format("svg"); }
-.iconfont { font-family: "iconfont" !important; font-size: 16px; font-style: normal; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
-
-.icon-dui3:before { content: "\e63d"; }
-
-.icon-dui2:before { content: "\e657"; }
-
-.icon-xiazai1:before { content: "\e606"; }
-
-.icon-delete1:before { content: "\e621"; }
-
-.icon-xinxi1:before { content: "\e622"; }
-
-.icon-jia1:before { content: "\e623"; }
-
-.icon-gongju:before { content: "\e63c"; }
-
-.icon-xiangshang-two:before { content: "\eb93"; }
-
-.icon-xiangyou-two:before { content: "\eb94"; }
-
-.icon-xiangzuo-two:before { content: "\eb95"; }
-
-.icon-xiangxia-two:before { content: "\eb96"; }
-
-.icon-sousuo:before { content: "\e620"; }
-
-.icon-dui:before { content: "\e715"; }
-
-.icon-xiazai2:before { content: "\e668"; }
-
-.icon-jia2:before { content: "\e60d"; }
-
-.icon-xiangshang:before { content: "\e62c"; }
-
-.icon-xiangyou:before { content: "\e62d"; }
-
-.icon-xiangxia:before { content: "\e62e"; }
-
-.icon-Close:before { content: "\e609"; }
-
-.icon-close2:before { content: "\e60a"; }
-
-.icon-close22:before { content: "\e60b"; }
-
-.icon-jian1:before { content: "\e60c"; }
-
-.icon-jia22:before { content: "\e60e"; }
-
-.icon-home:before { content: "\e610"; }
-
-.icon-delete2:before { content: "\e611"; }
-
-.icon-Email:before { content: "\e612"; }
-
-.icon-Edit1:before { content: "\e613"; }
-
-.icon-jian11:before { content: "\e614"; }
-
-.icon-home11:before { content: "\e615"; }
-
-.icon-xinxi22:before { content: "\e616"; }
-
-.icon-xinxi2:before { content: "\e617"; }
-
-.icon-More:before { content: "\e618"; }
-
-.icon-Star1:before { content: "\e619"; }
-
-.icon-search:before { content: "\e61a"; }
-
-.icon-Refresh:before { content: "\e61b"; }
-
-.icon-User:before { content: "\e61c"; }
-
-.icon-Star11:before { content: "\e61d"; }
-
-.icon-set1:before { content: "\e61e"; }
-
-.icon-Set11:before { content: "\e61f"; }
-
-.icon-xiangzuo:before { content: "\e669"; }
-
 body { min-height: 100vh; }
 
 *[btn], .btn { cursor: pointer; }
@@ -332,7 +247,7 @@ input[type="number"] { -moz-appearance: textfield; }
 .index-page .campaign-main .btn-box .get-btn { display: block; float: left; box-sizing: border-box; text-align: center; width: 202px; height: 42px; line-height: 40px; border-radius: 21px; border: 1px solid #ff2e2e; color: #ff2e2e; }
 .index-page .tv-show-floor { box-sizing: border-box; }
 .index-page .tv-show-floor .get-more { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; writing-mode: tb-rl; float: right; text-align: center; height: 300px; font-size: 28px; margin-right: 30px; color: #696a6d; }
-.index-page .tv-show-floor .get-more .icon-box { display: inline-block; width: 36px; height: 36px; vertical-align: middle; margin-top: 10px; }
+.index-page .tv-show-floor .get-more .icon-box { display: inline-block; width: 36px; height: 36px; vertical-align: middle; margin-top: 10px; margin-left: -10px; }
 .index-page .tv-show-floor .get-more .icon-box .icon { display: block; width: 100%; }
 .index-page .tv-show-floor .show-main { overflow: hidden; }
 .index-page .tv-show-floor .tv-show-main { float: left; width: 510px; }
@@ -381,7 +296,7 @@ input[type="number"] { -moz-appearance: textfield; }
   .index-page .campaign-floor .campaign-main .img-box { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-pack: start; -webkit-justify-content: flex-start; -ms-flex-pack: start; justify-content: flex-start; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; float: none; width: 100%; background-color: #e7e7e7; }
   .index-page .campaign-floor .campaign-main .img-box .img { display: block; width: auto; height: 100%; }
   .index-page .campaign-floor .campaign-main .info-show-box { float: none; width: 100%; padding: 20px; height: auto; }
-  .index-page .campaign-floor .campaign-main .info-show-box .campaign-title { width: 80%; font-size: 3.16667vw; }
+  .index-page .campaign-floor .campaign-main .info-show-box .campaign-title { width: 85%; font-size: 24px; line-height: 34px; }
   .index-page .campaign-floor .campaign-main .info-show-box .btn-box { position: relative; left: auto; bottom: auto; }
   .index-page .tv-show-floor { position: relative; padding: 0 20px; }
   .index-page .tv-show-floor .tv-show-main { overflow: hidden; float: none; width: 100%; }
@@ -393,7 +308,10 @@ input[type="number"] { -moz-appearance: textfield; }
   .index-page .ms360-floor { padding: 0 20px; }
   .index-page .ms360-floor .news-list .img-box { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-pack: start; -webkit-justify-content: flex-start; -ms-flex-pack: start; justify-content: flex-start; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; float: none; width: 100%; height: 33.33333vw; background-color: #e7e7e7; }
   .index-page .ms360-floor .news-list .img-box .img { height: 100%; width: auto; }
-  .index-page .ms360-floor .news-list .new-info { float: none; width: 100%; }
+  .index-page .ms360-floor .news-list .new-info { float: none; width: 100%; height: auto; }
+  .index-page .ms360-floor .news-list .new-info .new-footer { position: relative; left: auto; bottom: auto; padding-bottom: 20px; padding-top: 20px; }
+  .index-page .ms360-floor .news-list .new-info .new-brief { width: 90%; }
+  .index-page .ms360-floor .news-list .new-info .new-title { font-size: 24px; line-height: 34px; }
   .index-page .footer-banner { padding-left: 20px; padding-right: 20px; }
   .index-page .footer-banner .footer-title { font-size: 3.33333vw; margin-right: 5vw; line-height: 5vw; }
   .index-page .footer-banner .info { font-weight: normal; width: auto; font-size: 2vw; line-height: 5vw; border: none; } }
@@ -415,7 +333,6 @@ input[type="number"] { -moz-appearance: textfield; }
   .index-page .tv-show-floor .tv-show-main .tv-info-main .tv-title { width: 100%; }
   .index-page .tv-show-floor .get-more { font-size: 2.66667vw; }
   .index-page .tv-show-floor .get-more .icon-box { width: 3.2vw; height: 3.2vw; }
-  .index-page .ms360-floor .new-info .new-title { font-size: 3.73333vw; }
   .index-page .footer-banner .footer-title { float: none; }
   .index-page .footer-banner .info { float: none; text-align: left; } }
 
