--- a/sass/reset.scss
+++ b/sass/reset.scss
@@ -63,6 +63,7 @@ address,caption,cite,code,dfn,th,var, em, i , b{font-style:normal;font-weight:40
 a{text-decoration:none;outline:none; color:#666;}
 
 a:hover{text-decoration:none; color: darken($red, 25%);}
+a{ -webkit-tap-highlight-color:rgba(255,0,0,0);}
 
 button, input{ border:none; }
 
