--- a/css/base.css
+++ b/css/base.css
@@ -160,6 +160,8 @@ a { text-decoration: none; outline: none; color: #666; }
 
 a:hover { text-decoration: none; color: #ae0000; }
 
+a { -webkit-tap-highlight-color: rgba(255, 0, 0, 0); }
+
 button, input { border: none; }
 
 input[disabled='disabled']::-webkit-input-placeholder { color: #bbb; }
@@ -287,7 +289,7 @@ input[type="number"] { -moz-appearance: textfield; }
   .index-page .nav-main { padding-left: 20px; padding-right: 20px; padding-top: 10px; height: auto; }
   .index-page .nav-main .nav-list { float: none; position: absolute; z-index: 20; margin-top: 0; width: 100%; left: 0; top: 100%; background-color: #fff; }
   .index-page .banner-floor .swiper-pagination { display: none; }
-  .index-page .banner-floor .mySwiper { height: 48.33333vw; }
+  .index-page .banner-floor .mySwiper { height: 50vw; }
   .index-page .banner-floor .mySwiper .title { overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; font-size: 4.33333vw; width: 60%; margin-top: 29.16667vw; margin-left: 5vw; }
   .index-page .banner-floor .swiper-title-list { box-sizing: border-box; width: 80%; padding: 0; }
   .index-page .banner-floor .swiper-title-list .title { width: 100%; }
@@ -303,8 +305,8 @@ input[type="number"] { -moz-appearance: textfield; }
   .index-page .tv-show-floor .tv-show-main .tv-box { float: left; width: 50%; }
   .index-page .tv-show-floor .tv-show-main .tv-info-main { float: left; box-sizing: border-box; padding-left: 10px; padding-top: 10px; height: 300px; width: 50%; }
   .index-page .tv-show-floor .tv-show-main .tv-info-main .tv-info { display: none; }
-  .index-page .tv-show-floor .get-more { display: block; float: none; writing-mode: horizontal-tb; text-align: left; vertical-align: middle; position: absolute; height: auto; font-size: 2.08333vw; top: 10px; right: 20px; }
-  .index-page .tv-show-floor .get-more .icon-box { vertical-align: middle; margin-top: -2px; margin-left: 4px; width: 2.5vw; height: 2.5vw; }
+  .index-page .tv-show-floor .get-more { display: block; float: none; writing-mode: horizontal-tb; text-align: left; vertical-align: middle; position: absolute; height: auto; font-size: 20px; top: 10px; right: 20px; }
+  .index-page .tv-show-floor .get-more .icon-box { vertical-align: middle; margin-top: -2px; margin-left: 4px; width: 20px; height: 20px; }
   .index-page .ms360-floor { padding: 0 20px; }
   .index-page .ms360-floor .news-list .img-box { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; -webkit-box-pack: start; -webkit-justify-content: flex-start; -ms-flex-pack: start; justify-content: flex-start; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; float: none; width: 100%; height: 33.33333vw; background-color: #e7e7e7; }
   .index-page .ms360-floor .news-list .img-box .img { height: 100%; width: auto; }
@@ -320,10 +322,11 @@ input[type="number"] { -moz-appearance: textfield; }
   .index-page .nav-main .nav-list { display: none; background-color: #fff; }
   .index-page .nav-main .nav-list .nav-box { position: relative; padding: 10px; height: auto; border-bottom: 1px solid #e9e9e9; }
   .index-page .nav-main .nav-list .nav-box .show-list { position: absolute; right: 20px; top: 100%; z-index: 80; background-color: #fff; }
+  .index-page .nav-main .tag, .index-page .nav-main .reg { display: none; }
   .index-page .banner-floor .swiper-slide .title { display: none; }
   .index-page .campaign-floor { padding: 0 10px; }
   .index-page .campaign-floor .campaign-main .info-show-box { float: none; width: 100%; padding: 20px; height: auto; }
-  .index-page .campaign-floor .campaign-main .info-show-box .campaign-title { width: 80%; font-size: 3.73333vw; }
+  .index-page .campaign-floor .campaign-main .info-show-box .campaign-title { width: 80%; font-size: 24px; }
   .index-page .campaign-floor .campaign-main .info-show-box .btn-box .show-btn, .index-page .campaign-floor .campaign-main .info-show-box .btn-box .get-btn { float: none; }
   .index-page .campaign-floor .campaign-main .info-show-box .btn-box .show-btn { margin-bottom: 20px; }
   .index-page .tv-show-floor { position: relative; }
@@ -331,8 +334,8 @@ input[type="number"] { -moz-appearance: textfield; }
   .index-page .tv-show-floor .tv-show-main .tv-info-main { float: none; width: 100%; height: auto; margin-bottom: 20px; }
   .index-page .tv-show-floor .tv-show-main .tv-info-main .tv-info { display: block; }
   .index-page .tv-show-floor .tv-show-main .tv-info-main .tv-title { width: 100%; }
-  .index-page .tv-show-floor .get-more { font-size: 2.66667vw; }
-  .index-page .tv-show-floor .get-more .icon-box { width: 3.2vw; height: 3.2vw; }
+  .index-page .tv-show-floor .get-more { font-size: 16px; }
+  .index-page .tv-show-floor .get-more .icon-box { width: 16px; height: 16px; }
   .index-page .footer-banner .footer-title { float: none; }
   .index-page .footer-banner .info { float: none; text-align: left; } }
 
